# rule30_21

./: CMakeLists.txt  profile-edge.ipynb
bridge/: main.cpp
bridge/concurrency/: Semaphore.cpp  Semaphore.h
bridge/grid/: IGrid.cpp  IGrid.h  grid_facade.cpp  grid_facade.h
bridge/grid/impl/: galqiwi_v1_impl.cpp  galqiwi_v1_impl.h
bridge/grid/impl/crunching/: process_parallelogram.cpp  process_parallelogram.h
bridge/solvers/: ISolver.h
bridge/solvers/multithreaded_solver/: multithreaded_solver.cpp  multithreaded_solver.h
bridge/solvers/simple_solver/: simple_solver.cpp  simple_solver.h
diamond/: Edge.cpp  Edge.h  IChunkProcessor.cpp  IChunkProcessor.h  SimpleChunkProcessor.cpp  SimpleChunkProcessor.h  main.cpp
flat/: main.cpp
interfaces/grid/: IGrid.cpp  IGrid.h
palych/: main.cpp
parallelogram/: main.cpp  parallelogram_benchmark.cpp  utils.cpp  utils.h
parallelogram/crunching/: process_parallelogram.cpp  process_parallelogram.h
parallelogram/distribution/: Grid.hpp  IWorkChunk.cpp  IWorkChunk.h  Master.cpp  Master.h  SharedArray.hpp  SharedValue.hpp  WorkChunk.cpp  WorkChunk.h  Worker.cpp  Worker.h
